# pg-walstream

./: Cargo.toml  README.md
.github/workflows/: ci.yml
integration-tests/: complex_types.rs  exec_with_params.rs  pg_result_get_bytes.rs  rate_limited_streaming.rs  safe_transaction_consumer.rs  snapshot_export.rs  ssl_connections.rs  typed_deserialization.rs
src/: buffer.rs  column_value.rs  deserializer.rs  error.rs  lib.rs  lsn.rs  protocol.rs  sql_builder.rs  stream.rs  types.rs
src/connection/: libpq.rs  mod.rs  params.rs
src/connection/native/: connection.rs  conninfo.rs  query.rs  startup.rs  wire.rs
src/pgoutput_encode/: mod.rs
