[package]
name = "pg_walstream"
version = "0.3.0"
edition = "2021"
authors = ["danielshih <dog830228@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/isdaniel/pg-walstream"
homepage = "https://github.com/isdaniel/pg-walstream"
documentation = "https://docs.rs/pg_walstream"
readme = "README.md"
description = "PostgreSQL logical replication protocol library - parse and handle PostgreSQL WAL streaming messages"
keywords = ["postgresql", "replication", "wal", "logical-decoding", "streaming"]
categories = ["database", "parsing", "network-programming", "no-std"]

[dependencies]
# Core dependencies (always required)
bytes = { version = "1.11.0", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

# Optional std-only dependencies
tokio = { version = "1.49.0", features = ["io-util", "net", "time", "macros"], optional = true }
tokio-util = { version = "0.7.18", features = ["compat"], optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
tracing = { version = "0.1.44", optional = true }
libpq-sys = { version = "0.8", optional = true }

# hashbrown for no_std HashMap support
hashbrown = { version = "0.15", optional = true }

[features]
default = ["std"]

# Standard library support (includes all functionality)
std = [
    "bytes/std",
    "serde/std",
    "serde_json/std",
    "tokio",
    "tokio-util",
    "chrono",
    "tracing",
    "libpq-sys",
]

# Alloc-only support (no_std with heap allocation)
# Provides protocol parsing without connection/stream management
alloc = ["hashbrown"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47.2", features = ["full"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.18", features = ["time"] }
flate2 = "1.1.8"
